#633 #634 #621 Upgrade testcontainers and s3. Fix integration test